addressed word wrapping issue & responsive menu
QubesOS/qubes-issues#1841

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -79,6 +79,9 @@ $qubes-blue-light:			#99bfff;
 $qubes-purple:					#9f389f;
 $qubes-yellow: 					#e7e532;
 
+$color-white:						#ffffff;
+$color-black:						#000000;
+
 //== Scaffolding
 //
 //## Settings for some of the most global styles.
